changed style to dark mode + added style to buttons + textbox, fixed missing hint element

--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,12 @@
 @import url('https://themes.googleusercontent.com/fonts/css?kit=NVWGKW8pC4yJvbnzJuWfbiB38A_Z_8wKoRHMSx1gVi6WYRgE3v-r3GoQb6ax0_L_hsmsMnmAOnuclselIyjr9A');
+
 body {
     font-family: 'Raleway', sans-serif, Arial;
     margin-left: 80px;
     margin-right: 80px;
-    color: #01380f;
     line-height: 26px;
+    color: #9dfab8;
+    background-color: #2b2b2b;
 }
 
 header {
@@ -19,81 +21,50 @@ header {
     line-height: 56px;
 }
 
-/*#nav {
-    display: flex;
-    justify-content: flex-end;
-    float: right;
-    line-height: 56px;
-}
-
-.link {
-    font-size: 20px;
-    margin-left: 15px;
-    margin-right: 15px;
-}*/
-
 hr {
     margin-top: 4px;
     margin-bottom: 32px;
-    border-color: #e3f2e7;
-    background-color: #e3f2e7;
-    color: #e3f2e7;
+    border-color: #9dfab8;
 }
 
 h1 {
-    font-size: 20px;
+    font-size: 24px;
 }
 
 h3 {
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 0px;
     padding-bottom: 0px;
 }
 
 p, li {
-    font-size: 14px;
+    font-size: 18px;
 }
 
-a {
-    text-decoration: none;
-    color: #369652;
+#hint {
+    color: #548a64;
 }
 
-img {
-    float: left;
-    margin-right: 48px;
-    margin-bottom: 20px;
-    max-width: 100%;
-    max-height: 100%;
+input {
+    font-family: 'Raleway', sans-serif, Arial;
+    background-color: #404040;
+    border-color: #404040;
+    color: white;
+    font-size: 20px;
+    height: 28px;
 }
 
-/*.circle {
-    border: 4px double;
-    color: #01380f;
-    border-radius: 100%;
-    max-width: 360px;
-    max-height: 360px;
-    margin-left: 20px;
-    margin-right: 20px;
+button {
+    font-family: 'Raleway', sans-serif, Arial;
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    background-color: #9dfab8;
+    color: #404040;
+    border-color: #9dfab8;
+    border-radius: 30px;
 }
-
-p.clear {
-    clear: both;
-}
-
-.unbulleted {
-    list-style-type: none;
-}
-
-.spaced {
-    margin-top: 1em;
-    margin-bottom: 1em;
-}
-
-.date {
-    font-size: 16px;
-    color: #355b3e;
-}*/
 
 @media screen and (max-width: 769px) {
 
@@ -118,20 +89,4 @@ p.clear {
     p, li {
         font-size: 14px;
     }
-
-    /*#nav {
-        float: none;
-        justify-content: center;
-    }*/
-
-    img {
-        float: none;
-    }
-
-    /*.circle {
-        margin: auto;
-        display: block;
-        max-width: 72%;
-        max-height: 72%;
-    }*/
 }
